--- a/Plugin/addons/gdscript_code_style/plugin.cfg
+++ b/Plugin/addons/gdscript_code_style/plugin.cfg
@@ -4,4 +4,4 @@ name="GDScriptStyleChecker"
 description="This is a plugin for the Godot Game Engine that can be used to check whether the code corresponds to the official style guide"
 author="Lars Telöken"
 version="1.0.0"
-script="style_checker.gd"
+script="style_check.gd"
